Fixed syllable wrapping

--- a/src/styles/app.module.scss
+++ b/src/styles/app.module.scss
@@ -168,11 +168,12 @@ h6 {
 }
 .word {
   &:hover {
-    background-color: lighten(#ffdc00, 20);
+    background-color: rgba(117, 183, 243, 0.07);
   }
   cursor: pointer;
   margin-left: 0.1em;
   margin-right: 0.1em;
+  white-space: nowrap;
 }
 @keyframes fadeInOpacity {
   0% {
@@ -181,4 +182,17 @@ h6 {
   100% {
     opacity: 1;
   }
+}
+.definition-inner {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  border: 2px solid #e4e4e4;
+  margin: 1em;
+  padding: 2em;
+  max-width: 500px;
+  z-index: 2147483636;
+  border-radius: 10px;
+  max-height: 200px;
+  background: white;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
